show sample sentences

--- a/war/SampleSentences.css
+++ b/war/SampleSentences.css
@@ -1,43 +1,67 @@
 /** Add css rules here for your application. */
-.suggestBox{
-	    width: 45%;
-    height: 35px !important;
-    margin-left: 27.5%;
-    margin-top: 9px;
+.suggestBox {
+	width: 45%;
+	height: 35px !important;
+	margin-left: 27.5%;
+	margin-top: 9px;
+}
+.loader {
+    border: 12px solid #f3f3f3; /* Light grey */
+    border-top: 12px solid #3498db; /* Blue */
+    border-bottom: 12px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    animation: spin 2s linear infinite;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
-.gwt-SuggestBoxPopup{
-	width: 60% !importtant;
+.PanelAddSample {
+	border-bottom: 2px solid #ff1a1a;
+	margin-bottom: 15px;
+}
+
+.notifyAddSample{
+	font-size: 18px;
+    margin-left: 2%;
+    font-weight: 700;
+}
+
+.gwt-SuggestBoxPopup {
+	width: 60%!importtant;
 }
 
 /** Example rules used by the template application (remove for your app) */
 h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
+	font-size: 2em;
+	font-weight: bold;
+	color: #777777;
+	margin: 40px 0px 70px;
+	text-align: center;
 }
 
 .sendButton {
-  display: block;
-  font-size: 16pt;
+	display: block;
+	font-size: 16pt;
 }
 
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
-  width: 400px;
+	width: 400px;
 }
 
 .dialogVPanel {
-  margin: 5px;
+	margin: 5px;
 }
 
 .serverResponseLabelError {
-  color: red;
+	color: red;
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
-  margin: 15px 6px 6px;
+	margin: 15px 6px 6px;
 }
